crates/tokio-otp/tests/ui/topology/tuple_struct.rs
use tokio_otp::{ActorContext, ActorResult, Actor, Topology};

#[derive(Clone)]
struct Worker;

impl Actor for Worker {
    type Msg = ();

    async fn handle(&mut self, _message: (), _ctx: &ActorContext<()>) -> ActorResult {
        Ok(tokio_otp::prelude::Continue)
    }
}

#[derive(Topology)]
struct TupleTopology(Worker);

fn main() {}
